--- a/packages/docs/src/content/docs/guides/intro-to-ssr.mdx
+++ b/packages/docs/src/content/docs/guides/intro-to-ssr.mdx
@@ -5,6 +5,8 @@ description: Understand server-side rendering before diving into implementation.
 
 import { Aside } from '@astrojs/starlight/components';
 
+**[Package on GitHub](https://github.com/hejhi/rimitive/tree/main/packages/ssr)**
+
 Server-side rendering (SSR) renders your app to HTML on the server before sending it to the browser. Instead of shipping an empty `<div id="app">` and waiting for JavaScript to build the page, users see content immediately.
 
 ---
@@ -25,23 +27,9 @@ Server-side rendering (SSR) renders your app to HTML on the server before sendin
 
 Your app runs twice: once on the server, once on the client. The following questions break down what that means.
 
-### _Why_ execute it on the server to begin with?
-
-- Reactive apps generate dynamic, interactive content, but at the end of the day for web apps, the output that the user sees and interacts with is HTML
-- The server can be used to execute your app and generate the _exact HTML_ structure your app would have otherwise output in the browser on load
-- That server-generated HTML can be serialized and sent to the client when a user visits a page, rendering the HTML old-school style—just like a PHP site would render HTML, except that it was _actually_ generated from executing your app on the server
-- When the page loads in the client, the user sees the _identical HTML output_ they would have seen after your app loads in the client, but before the js even loads—_identical_ is the key word here—if it's _not_ identical, then that results in a hydration mismatch (described later)
-- This provides an instantaneous load time for the user
-
-A static HTML page is obviously not what you want. Somehow, your app needs to "catch up" to the rendered HTML, and take back ownership over the markup to make it interactive. That's what we call **hydration**.
-
 ### How does it run on the server?
 
-Your app is JavaScript, and JavaScript can run on the server. For view modules like `el`, Rimitive lets you swap in a server-friendly adapter that generates markup without a real DOM.
-
-The out-of-the-box server adapter is powered by [`parse5`](https://github.com/inikulin/parse5), a lightweight HTML parser. When `el("div")` runs on the server, it creates a parse5 element instead of a real DOM element. This lets parse5 render your app's HTML structure the same way the browser would.
-
-That generated HTML structure is then serialized into a string and sent to the client.
+Your app is JavaScript, and JavaScript can run on the server. Rimitive provides a server adapter that generates HTML without a real DOM.
 
 ### What about browser APIs and events?
 
@@ -74,24 +62,7 @@ Use `load()` for any data that needs to render on the server.
 
 ### What is Hydration?
 
-When the browser receives SSR HTML, it displays it immediately—but it's static. Buttons don't work, inputs don't respond. The page needs JavaScript to become interactive.
-
-**Hydration** is the process of making that static HTML interactive. Instead of throwing away the HTML and rebuilding the DOM from scratch (which would cause a flash), hydration walks the existing DOM and attaches your app's event listeners and reactive bindings.
-
-Rimitive provides a hydration adapter that you plug into `createElModule()`. During hydration, this adapter walks the existing DOM elements instead of creating new ones, wiring up your signals and event handlers to what's already there.
-
----
-
-## The Mental Model
-
-1. **Server renders your app** — using a server adapter that creates parse5 elements
-2. **HTML is serialized and sent** — the client receives fully-rendered markup
-3. **Browser displays HTML immediately** — users see content before JS loads
-4. **Client JavaScript loads** — your app code runs again
-5. **Hydration walks the DOM** — attaches reactivity to existing elements
-6. **App is interactive** — future updates use normal DOM operations
-
-The server and client must produce _identical_ HTML. If they don't, you get a hydration mismatch error.
+**Hydration** makes the static HTML interactive. See [Client Hydration](/guides/client-hydration) for details.
 
 ---
 
