--- a/packages/docs/src/content/docs/guides/refs.mdx
+++ b/packages/docs/src/content/docs/guides/refs.mdx
@@ -8,7 +8,7 @@ import SearchTags from '../../../components/SearchTags.astro';
 
 <SearchTags tags={["ref", "dom-access", "focus", "imperative", "third-party", "canvas", "resize-observer", "cleanup"]} />
 
-Sometimes you need direct DOM access—for focus management, measurements, third-party library integration, or canvas drawing. Rimitive handles this with the `.ref()` method on elements.
+Use `.ref()` for direct DOM access.
 
 ---
 
