--- a/packages/docs/src/content/docs/view/index.mdx
+++ b/packages/docs/src/content/docs/view/index.mdx
@@ -5,6 +5,8 @@ description: Declarative UI modules for building reactive interfaces.
 
 The `@rimitive/view` package provides declarative modules for building reactive user interfaces — elements, lists, conditionals, and more.
 
+**[Package on GitHub](https://github.com/hejhi/rimitive/tree/main/packages/view)**
+
 ## Installation
 
 ```bash
