--- a/packages/docs/src/content/docs/guides/custom-modules.mdx
+++ b/packages/docs/src/content/docs/guides/custom-modules.mdx
@@ -3,6 +3,8 @@ title: Custom Modules
 description: Define your own modules with defineModule.
 ---
 
+**[Package on GitHub](https://github.com/hejhi/rimitive/tree/main/packages/core)**
+
 You can define your own modules with `defineModule` and compose them alongside signals, view, or anything else.
 
 ---
@@ -25,8 +27,6 @@ const LoggerModule = defineModule({
 const svc = compose(LoggerModule);
 svc.logger.log('hello');
 ```
-
-The `name` becomes the key on the composed service. Whatever `create` returns becomes the value.
 
 ---
 
@@ -148,15 +148,7 @@ This makes `compose()` useful for any library or application architecture—not 
 
 ## Tree-Shaking
 
-Because you explicitly compose modules, everything is fully tree-shakeable. If you don't use `EffectModule`, it won't be in your bundle. If you only need signals without a view, just compose signals:
-
-```typescript
-import { compose } from '@rimitive/core';
-import { SignalModule, ComputedModule } from '@rimitive/signals/extend';
-
-const svc = compose(SignalModule, ComputedModule);
-// No view code bundled
-```
+Only the modules you compose are included in your bundle.
 
 ---
 
