--- a/packages/docs/src/content/docs/patterns/async-loading.mdx
+++ b/packages/docs/src/content/docs/patterns/async-loading.mdx
@@ -8,9 +8,7 @@ import SearchTags from '../../../components/SearchTags.astro';
 
 <SearchTags tags={["async", "loading", "suspense", "pending", "error-state", "resource", "load", "ssr"]} />
 
-React has Suspense. Solid has `<Suspense>` and `<Show>`. These handle async loading states declaratively.
-
-Rimitive handles async state explicitly through two modules: `resource` for reactive data fetching with automatic refetch, and `load` for simpler async boundaries. Both use `match` for rendering. No magic, no special components—just reactive state.
+Rimitive handles async state through two modules: `resource` for reactive data fetching with automatic refetch, and `load` for simpler async boundaries. Both use `match` for rendering.
 
 ---
 
@@ -65,8 +63,6 @@ return el('div')(
 );
 ```
 
-The explicit approach is more verbose but clearer about what's happening.
-
 ---
 
 ## A Show Helper
@@ -93,8 +89,6 @@ return el('div')(
   )
 );
 ```
-
-But this is just a function—nothing special about it.
 
 ---
 
@@ -282,10 +276,6 @@ const ProductPanel = (svc: Service) => () => {
   );
 };
 ```
-
-<Aside type="tip">
-The explicit state handling might feel verbose compared to Suspense. But it's also more predictable—you always know exactly what renders when, with no framework magic deciding for you.
-</Aside>
 
 ---
 
