--- a/packages/docs/src/content/docs/patterns/shared-state.mdx
+++ b/packages/docs/src/content/docs/patterns/shared-state.mdx
@@ -8,12 +8,6 @@ import SearchTags from '../../../components/SearchTags.astro';
 
 <SearchTags tags={["context", "shared-state", "global-state", "service-threading", "theme", "user", "prop-drilling"]} />
 
-Other frameworks have "context"—a way to pass values down the component tree without threading them through every intermediate component.
-
----
-
-## The Pattern: Service Threading
-
 In Rimitive, the **service is the context**. Components receive a service object containing the modules they need. You can extend that service with additional state at any point in the tree.
 
 ```typescript
@@ -55,7 +49,7 @@ const Header = (svc: AppService) => () => {
 };
 ```
 
-No magic or implicit tree traversal. You can see exactly what's being passed where.
+You can see exactly what's being passed where.
 
 ---
 
@@ -134,23 +128,6 @@ const ThemedCard = (svc: ThemedService) => () => { ... };
 // This one needs the full app service
 const UserProfile = (svc: AppService) => () => { ... };
 ```
-
----
-
-## Why Not a Context Module?
-
-I considered adding one. The problem: context in other frameworks works through implicit tree traversal—a component "finds" the nearest provider by walking up the tree at render time.
-
-Rimitive components are just functions returning specs. There's no render cycle or "currently rendering" context to hook into. Any context system would either:
-
-1. Require explicit scope passing (which is what we already have)
-2. Add hidden magic that fights Rimitive's design philosophy
-
-The service threading pattern is explicit, type-safe, and composes naturally. It's not as terse as `useContext()`, but you can always see what's happening.
-
-<Aside type="tip">
-If you find yourself passing the same service through many layers, consider whether those intermediate components actually need to be separate. Rimitive's composition model often leads to flatter component hierarchies than you might expect.
-</Aside>
 
 ---
 
