--- a/packages/docs/src/content/docs/view/map.mdx
+++ b/packages/docs/src/content/docs/view/map.mdx
@@ -1,12 +1,12 @@
 ---
 title: map()
-description: Render reactive lists with efficient reconciliation.
+description: Render reactive lists.
 ---
 
 import { Aside } from '@astrojs/starlight/components';
 import SandboxDir from '../../../components/SandboxDir.astro';
 
-The `map()` function renders a reactive array as a list of elements. When items change, it efficiently updates only what's necessary.
+The `map()` function renders a reactive array as a list of elements.
 
 <SandboxDir dir="rendering-lists" editorHeight="380px" />
 
@@ -26,18 +26,12 @@ map(items, keyFn, render)
 : A reactive array (signal or computed).
 
 **`keyFn`** (required for objects)
-: A function that returns a unique identifier for each item. Receives the plain item value.
+: A function that returns a unique identifier for each item.
 
 **`render`**
-: A function that returns an element spec for each item. Receives a **reactive signal** wrapping the item.
-
-### Return value
-
-A reactive list spec that reconciles efficiently when the source array changes.
+: A function that returns an element spec for each item. Receives a **signal** wrapping the item.
 
 ## Description
-
-`map()` efficiently reconciles DOM elements when items are added, removed, or reordered. Unlike virtual DOM diffing, it tracks items by key and updates only what's necessary.
 
 ### Primitive arrays
 
@@ -98,16 +92,6 @@ todos(arr => arr.map(t =>
 <Aside type="caution">
 `map()`'s render function is **not** a reactive scope. Use `computed()` for reactive props or text inside the render function. See [Signal Patterns](/patterns/signal-patterns#dont-return-elements-from-computeds) for details.
 </Aside>
-
-### Reconciliation
-
-When the source array changes, `map()`:
-- **Adds** elements for new items
-- **Removes** elements for deleted items
-- **Reorders** elements when positions change
-- **Updates** item signals when values change (same key)
-
-This is efficient because elements are reused — only the minimal DOM operations are performed.
 
 ## Examples
 
@@ -209,4 +193,5 @@ The index parameter is also a signal that updates when items are reordered.
 
 - [el()](/view/el) — Create elements
 - [match()](/view/match) — Conditional rendering
-- [Signal Patterns](/patterns/signal-patterns) — Computed collections pattern
+- [iter()](/signals/iter) — The data structure powering `map()`
+- [Signal Patterns](/patterns/signal-patterns) — Patterns for arrays and collections
